# refind-colorizer

./: pyproject.toml  readme.md
refind_colorizer/: cli.py
