[tool.poetry]
name = "refind_colorizer"
version = "0.0.0"
description = "Tool for generating rEFInd color palette based on regular theme."
authors = ["Wiktor Zykubek <dev@wzykubek.xyz>"]
license = "ISC"
readme = "readme.md"
packages = [{ include = "refind_colorizer" }]

[tool.poetry.dependencies]
python = "^3.12"
CairoSVG = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.poetry.scripts]
refind-palette-builder = "refind_colorizer.cli:main"

[tool.black]
line-length = 88

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
dirty = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
